# openfrp_api_rs

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: error.rs  lib.rs  login.rs
api/src/info/: mod.rs  nodes.rs
api/src/prelude/: auth.rs  client.rs  cookies.rs  mod.rs
api/src/proxy/: edit.rs  mod.rs  new.rs  remove.rs
api/src/user/: info.rs  mod.rs  proxies.rs
examples/login/: Cargo.toml
examples/login/src/: main.rs
sdk/: Cargo.toml
sdk/src/: api_url.rs  error.rs  lib.rs  login.rs
sdk/src/prelude/: auth.rs  client.rs  cookies.rs  mod.rs
sdk/src/user/: info.rs  proxies.rs
