[package]
name = "openfrp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.18.1"
http-body-util = "0.1.1"
hyper = { version = "1", features = ["full"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1.3", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.19"
tokio = { version = "1", features = ["full"] }
