[package]
name = "openfrp-sdk"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.18.1"
hyper = { version = "~0.14", features = ["full"] }
hyper-tls = "~0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
