[package]
name = "login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openfrp-sdk = { git = "https://github.com/W9pi3cZ1/openfrp_sdk.git", version = "0.0.2" }
tokio = { version = "1", features = ["full"] }
