[package]
name = "login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openfrp-api = { git = "https://github.com/W9pi3cZ1/openfrp_api_rs.git", version = "0.0.3" }
tokio = { version = "1", features = ["full"] }
